# pemc

./: README.md  TODO  macosx.md  meson.build  windows.md
language/pemcCpp/: cppFormula.cc  cppFormula.h  cppModel.cc  cppModel.h  generateSlowCppFormulaEvaluator.cc  generateSlowCppFormulaEvaluator.h
language/pemcCppExamples/: dice.cc
language/pemcCppTests/: test.cc
language/pemc_c/: pemc_c.c  pemc_c.h
language/pemc_c_examples/: dice.c
language/pemc_c_tests/: test.cc
language/pemc_cpp/: cpp_formula.cc  cpp_formula.h  cpp_model.cc  cpp_model.h  generate_slow_cpp_formula_evaluator.cc  generate_slow_cpp_formula_evaluator.h
language/pemc_cpp_examples/: dice.cc
language/pemc_cpp_tests/: test.cc
language/pemc_python/: pemcmodule.c
language/pemc_python_examples/: dice.py
pemc/: pemc.cc  pemc.h
pemc/basic/: cancellation_token.cc  cancellation_token.h  configuration.h  dll_defines.h  exceptions.h  label.cc  label.h  modelCapacity.h  model_capacity.h  probability.cc  probability.h  rawMemory.cc  rawMemory.h  raw_memory.cc  raw_memory.h  tsIndex.h  tscIndex.h  tsc_index.h  unique_voidptr.h
pemc/c_api/: c_api.cc  c_api.h
pemc/executableModel/: IChoiceResolver.h  abstractModel.cc  abstractModel.h  modelExecutor.cc  modelExecutor.h  temporaryStateStorage.cc  temporaryStateStorage.h
pemc/executable_model/: abstract_model.cc  abstract_model.h  i_choice_resolver.h  model_executor.cc  model_executor.h  temporary_state_storage.cc  temporary_state_storage.h
pemc/formula/: adaptedFormula.cc  adaptedFormula.h  adapted_formula.cc  adapted_formula.h  binaryFormula.cc  binaryFormula.h  binary_formula.cc  binary_formula.h  boundedBinaryFormula.cc  boundedBinaryFormula.h  boundedUnaryFormula.cc  boundedUnaryFormula.h  bounded_binary_formula.cc  bounded_binary_formula.h  bounded_unary_formula.cc  bounded_unary_formula.h  formula.cc  formula.h  formulaToStringVisitor.cc  formulaToStringVisitor.h  formulaUtils.cc  formulaUtils.h  formulaVisitor.h  formula_to_string_visitor.cc  formula_to_string_visitor.h  formula_utils.cc  formula_utils.h  formula_visitor.h  generateLabelBasedFormulaEvaluator.cc  generateLabelBasedFormulaEvaluator.h  generate_label_based_formula_evaluator.cc  generate_label_based_formula_evaluator.h  labelFormula.cc  labelFormula.h  slow_formula_compilation_visitor.cc  slow_formula_compilation_visitor.h  unaryFormula.cc  unaryFormula.h  unary_formula.cc  unary_formula.h
pemc/genericTraverser/: IPostStateStorageModifier.h  IPreStateStorageModifier.h  ITransitionsCalculator.h  ITransitionsOfStateCalculator.h  genericTraverser.cc  genericTraverser.h  pathTracker.cc  pathTracker.h  stateStorage.cc  stateStorage.h  temporalStateStorage.cc  temporalStateStorage.h  temporaryStateStorage.cc  temporaryStateStorage.h  transitionsOfState.h  traversalTransition.h
pemc/generic_traverser/: generic_traverser.cc  generic_traverser.h  i_post_state_storage_modifier.h  i_pre_state_storage_modifier.h  i_transitions_calculator.h  path_tracker.cc  path_tracker.h  state_storage.cc  state_storage.h  traversal_transition.h
pemc/lcmdp/: lcmdp.cc  lcmdp.h  lcmdpModelChecker.cc  lcmdpModelChecker.h  lcmdpToGv.cc  lcmdpToGv.h  lcmdp_model_checker.cc  lcmdp_model_checker.h  lcmdp_to_gv.cc  lcmdp_to_gv.h
pemc/lmc/: lmc.cc  lmc.h  lmcBuilder.cc  lmcModelChecker.cc  lmcModelChecker.h  lmcToGv.cc  lmcToGv.h  lmc_model_checker.cc  lmc_model_checker.h  lmc_to_gv.cc  lmc_to_gv.h
pemc/lmcTraverser/: addTransitionsToLmcModifier.cc  addTransitionsToLmcModifier.h  lmcBuilder.cc  lmcBuilder.h  lmcChoiceResolver.cc  lmcChoiceResolver.h  lmcModelExecutor.cc  lmcModelExecutor.h
pemc/lmc_traverser/: add_transitions_to_lmc_modifier.cc  add_transitions_to_lmc_modifier.h  lmc_choice_resolver.cc  lmc_choice_resolver.h
pemc/modelExecutor/: IChoiceResolver.h  IModel.h  abstractModel.cc  abstractModel.h  modelExecutor.cc  modelExecutor.h
pemc/reachability_traverser/: reachability_choice_resolver.cc  reachability_choice_resolver.h  reachability_modifier.cc  reachability_modifier.h
src/: test.cc
src/basic/: label.h
src/lcmdp/: lcmdp.h  lcmdpModelChecker.cc  lcmdpModelChecker.h
src/lmc/: lmc.cc  lmc.h  lmcModelChecker.cc  lmcModelChecker.h
subprojects/: fmt.wrap  throwassert.wrap
tests/: pemc.cc  test.cc
tests/basic/: cancellation_token.cc
tests/c_api/: c_api.cc  shared_ptr_to_c.cc
tests/executableModel/: modelExecutor.cc
tests/formula/: createUuids.cc  formulaToString.cc  labelBasedFormulaEvaluator.cc
tests/genericTraverser/: genericTraverser.cc  pathTracker.cc  stateStorage.cc
tests/lcmdp/: lcmdp.cc  lcmdpModelChecker.cc
tests/lmc/: lmc.cc  lmcExamples.cc  lmcExamples.h  lmcModelChecker.cc
tests/lmcTraverser/: addTransitionsToLmcModifier.cc  lmcChoiceResolver.cc
tests/simpleExecutableModel/: generateSlowSimpleFormulaEvaluator.cc  generateSlowSimpleFormulaEvaluator.h  simpleFormula.cc  simpleFormula.h  simpleModel.cc  simpleModel.h  slowSimpleFormulaEvaluator.cc
theory/: bibliography.bib  content.tex  main.tex
webassembly/: emscripten-osx.txt  readme.md
